# cpp_sdl_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
game/: Game.cpp  Game.h
